--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -33,8 +33,8 @@ nav {
   outline: none;
 }
 .search__bar button {
-  border-top-left-radius: 0;
-  border-bottom-left-radius: 0;
+  border-top-left-radius: 0 !important;
+  border-bottom-left-radius: 0px !important;
   border-left: none;
   background-color: #febd69;
   outline: none;
@@ -64,7 +64,8 @@ nav {
 }
 
 .nav__item,
-.nav__item :hover {
+.nav__item :hover,
+.active {
   color: white;
   padding-top: 15px;
   margin: auto 20px;
