--- a/src/Components/Search_Component/SearchComponent.css
+++ b/src/Components/Search_Component/SearchComponent.css
@@ -8,3 +8,14 @@
 .search__component {
   border-bottom: 2px solid #ddd;
 }
+
+.add__to__cart {
+  font-family: "Roboto", sans-serif;
+  height: 40px;
+  background: #ffa41c;
+  font-size: 14px;
+  border: 1px solid #b4b0b056;
+  box-shadow: 0 1px 20px 0 rgba(0, 0, 0, 0.1);
+  color: #111;
+  border-radius: 20px;
+}
