--- a/src/Components/LoginPage/LoginPage.css
+++ b/src/Components/LoginPage/LoginPage.css
@@ -56,5 +56,7 @@ button {
   outline: none;
 }
 
-/* #f1c862 */
-/* 949494  */
+.password__wrong__alert {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+}
