--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -63,6 +63,7 @@ nav {
 
 .nav__items {
   margin-left: 20px;
+  font-family: "Roboto", sans-serif;
 }
 
 .nav__item,
@@ -73,6 +74,7 @@ nav {
   margin: auto 20px;
   text-decoration: none !important;
   color: white;
+  z-index: 1000;
 }
 
 .upper__nav__item,
